lib/dcimgui/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
typedef struct ImDrawList_t ImDrawList;                              
typedef struct ImDrawListSharedData_t ImDrawListSharedData;          
typedef struct ImGuiPayload_t ImGuiPayload;                                    
typedef struct ImGuiStorage_t ImGuiStorage;                                    
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef struct ImGuiWindowClass_t ImGuiWindowClass;                            
typedef int ImGuiKey;             
typedef int ImGuiCol;             
typedef int ImGuiCond;            
typedef int ImGuiMouseButton;     
typedef int ImGuiDragDropFlags;     
typedef int ImGuiHoveredFlags;      
typedef int ImGuiInputFlags;        
typedef int ImGuiItemFlags;         
typedef int ImGuiKeyChord;          
struct ImVec4_t
{
    float x, y, z, w;
};
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void    ImGui_SetNextWindowClass(const ImGuiWindowClass* window_class);        
CIMGUI_API ImGuiID ImGui_GetWindowDockID(void);                                           
CIMGUI_API bool    ImGui_IsWindowDocked(void);                                            
CIMGUI_API void ImGui_LogToTTY(int auto_open_depth );                                      
CIMGUI_API void ImGui_LogToFile(int auto_open_depth , const char* filename );  
CIMGUI_API void ImGui_LogToClipboard(int auto_open_depth );                                
CIMGUI_API void ImGui_LogFinish(void);                                                               
CIMGUI_API void ImGui_LogButtons(void);                                                              
CIMGUI_API void ImGui_LogTextUnformatted(const char* text);                                          
CIMGUI_API bool                ImGui_BeginDragDropSource(ImGuiDragDropFlags flags );                      
CIMGUI_API bool                ImGui_SetDragDropPayload(const char* type, const void* data, size_t sz, ImGuiCond cond ); 
CIMGUI_API void                ImGui_EndDragDropSource(void);                                                      
CIMGUI_API bool                ImGui_BeginDragDropTarget(void);                                                    
CIMGUI_API const ImGuiPayload* ImGui_AcceptDragDropPayload(const char* type, ImGuiDragDropFlags flags );  
CIMGUI_API void                ImGui_EndDragDropTarget(void);                                                      
CIMGUI_API const ImGuiPayload* ImGui_GetDragDropPayload(void);                                                     
CIMGUI_API void ImGui_BeginDisabled(bool disabled );
CIMGUI_API void ImGui_EndDisabled(void);
CIMGUI_API void ImGui_PushClipRect(ImVec2 clip_rect_min, ImVec2 clip_rect_max, bool intersect_with_current_clip_rect);
CIMGUI_API void ImGui_PopClipRect(void);
CIMGUI_API void ImGui_SetItemDefaultFocus(void);                     
CIMGUI_API void ImGui_SetKeyboardFocusHere(void);                    
CIMGUI_API void ImGui_SetKeyboardFocusHereEx(int offset );  
CIMGUI_API void ImGui_SetNavCursorVisible(bool visible);  
CIMGUI_API void ImGui_SetNextItemAllowOverlap(void);  
CIMGUI_API bool           ImGui_IsItemHovered(ImGuiHoveredFlags flags );          
CIMGUI_API bool           ImGui_IsItemActive(void);                                        
CIMGUI_API bool           ImGui_IsItemFocused(void);                                       
CIMGUI_API bool           ImGui_IsItemClicked(void);                                       
CIMGUI_API bool           ImGui_IsItemClickedEx(ImGuiMouseButton mouse_button );  
CIMGUI_API bool           ImGui_IsItemVisible(void);                                       
CIMGUI_API bool           ImGui_IsItemEdited(void);                                        
CIMGUI_API bool           ImGui_IsItemActivated(void);                                     
CIMGUI_API bool           ImGui_IsItemDeactivated(void);                                   
CIMGUI_API bool           ImGui_IsItemDeactivatedAfterEdit(void);                          
CIMGUI_API bool           ImGui_IsItemToggledOpen(void);                                   
CIMGUI_API bool           ImGui_IsAnyItemHovered(void);                                    
CIMGUI_API bool           ImGui_IsAnyItemActive(void);                                     
CIMGUI_API bool           ImGui_IsAnyItemFocused(void);                                    
CIMGUI_API ImGuiID        ImGui_GetItemID(void);                                           
CIMGUI_API ImVec2         ImGui_GetItemRectMin(void);                                      
CIMGUI_API ImVec2         ImGui_GetItemRectMax(void);                                      
CIMGUI_API ImVec2         ImGui_GetItemRectSize(void);                                     
CIMGUI_API ImGuiItemFlags ImGui_GetItemFlags(void);                                        
CIMGUI_API ImGuiViewport* ImGui_GetMainViewport(void);  
CIMGUI_API ImDrawList* ImGui_GetBackgroundDrawList(void);                                    
CIMGUI_API ImDrawList* ImGui_GetBackgroundDrawListEx(ImGuiViewport* viewport );  
CIMGUI_API ImDrawList* ImGui_GetForegroundDrawList(void);                                    
CIMGUI_API ImDrawList* ImGui_GetForegroundDrawListEx(ImGuiViewport* viewport );  
CIMGUI_API bool                  ImGui_IsRectVisibleBySize(ImVec2 size);                 
CIMGUI_API bool                  ImGui_IsRectVisible(ImVec2 rect_min, ImVec2 rect_max);  
CIMGUI_API double                ImGui_GetTime(void);                                    
CIMGUI_API int                   ImGui_GetFrameCount(void);                              
CIMGUI_API ImDrawListSharedData* ImGui_GetDrawListSharedData(void);                      
CIMGUI_API const char*           ImGui_GetStyleColorName(ImGuiCol idx);                  
CIMGUI_API void                  ImGui_SetStateStorage(ImGuiStorage* storage);           
CIMGUI_API ImGuiStorage*         ImGui_GetStateStorage(void);
CIMGUI_API ImVec2 ImGui_CalcTextSize(const char* text);  
CIMGUI_API ImVec2 ImGui_CalcTextSizeEx(const char* text, const char* text_end , bool hide_text_after_double_hash , float wrap_width );
CIMGUI_API ImVec4 ImGui_ColorConvertU32ToFloat4(ImU32 in);
CIMGUI_API ImU32  ImGui_ColorConvertFloat4ToU32(ImVec4 in);
CIMGUI_API void   ImGui_ColorConvertRGBtoHSV(float r, float g, float b, float* out_h, float* out_s, float* out_v);
CIMGUI_API void   ImGui_ColorConvertHSVtoRGB(float h, float s, float v, float* out_r, float* out_g, float* out_b);
CIMGUI_API bool        ImGui_IsKeyDown(ImGuiKey key);                                            
CIMGUI_API bool        ImGui_IsKeyPressed(ImGuiKey key);                                         
CIMGUI_API bool        ImGui_IsKeyPressedEx(ImGuiKey key, bool repeat );             
CIMGUI_API bool        ImGui_IsKeyReleased(ImGuiKey key);                                        
CIMGUI_API bool        ImGui_IsKeyChordPressed(ImGuiKeyChord key_chord);                         
CIMGUI_API int         ImGui_GetKeyPressedAmount(ImGuiKey key, float repeat_delay, float rate);  
CIMGUI_API const char* ImGui_GetKeyName(ImGuiKey key);                                           
CIMGUI_API void        ImGui_SetNextFrameWantCaptureKeyboard(bool want_capture_keyboard);        
CIMGUI_API bool ImGui_Shortcut(ImGuiKeyChord key_chord, ImGuiInputFlags flags );
CIMGUI_API void ImGui_SetNextItemShortcut(ImGuiKeyChord key_chord, ImGuiInputFlags flags );
CIMGUI_API bool ImGui_SetItemKeyOwner(ImGuiKey key);  
CIMGUI_API bool             ImGui_IsMouseDown(ImGuiMouseButton button);                                          
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowWorkAreaInsets(void (*getWindowWorkAreaInsetsFunc)(ImGuiViewport* vp, ImVec4* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowFramebufferScale(void (*getWindowFramebufferScaleFunc)(ImGuiViewport* vp, ImVec2* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowPos(void (*getWindowPosFunc)(ImGuiViewport* vp, ImVec2* result));    
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowSize(void (*getWindowSizeFunc)(ImGuiViewport* vp, ImVec2* result));  