src/imguics/DCImGui.cs

    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowClass(System.IntPtr window_class);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_GetWindowDockID();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsWindowDocked();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_LogToTTY(int auto_open_depth);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_LogToFile(int auto_open_depth, [MarshalAs(UnmanagedType.LPUTF8Str)] string filename);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_LogToClipboard(int auto_open_depth);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_LogFinish();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_LogButtons();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_LogTextUnformatted([MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginDragDropSource(int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SetDragDropPayload([MarshalAs(UnmanagedType.LPUTF8Str)] string type, System.IntPtr data, System.IntPtr sz, int cond);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndDragDropSource();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginDragDropTarget();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_AcceptDragDropPayload([MarshalAs(UnmanagedType.LPUTF8Str)] string type, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndDragDropTarget();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetDragDropPayload();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_BeginDisabled([MarshalAs(UnmanagedType.I1)] bool disabled);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndDisabled();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushClipRect(ImVec2 clip_rect_min, ImVec2 clip_rect_max, [MarshalAs(UnmanagedType.I1)] bool intersect_with_current_clip_rect);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PopClipRect();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetItemDefaultFocus();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetKeyboardFocusHereEx(int offset);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetKeyboardFocusHere();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNavCursorVisible([MarshalAs(UnmanagedType.I1)] bool visible);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextItemAllowOverlap();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemHovered(int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemActive();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemFocused();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemClickedEx(int mouse_button);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemClicked();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemVisible();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemEdited();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemActivated();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemDeactivated();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemDeactivatedAfterEdit();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsItemToggledOpen();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsAnyItemHovered();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsAnyItemActive();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsAnyItemFocused();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_GetItemID();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetItemRectMin();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetItemRectMax();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetItemRectSize();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_GetItemFlags();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetMainViewport();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetBackgroundDrawListEx(System.IntPtr viewport);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetBackgroundDrawList();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetForegroundDrawListEx(System.IntPtr viewport);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetForegroundDrawList();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsRectVisibleBySize(ImVec2 size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsRectVisible(ImVec2 rect_min, ImVec2 rect_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern double ImGui_GetTime();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_GetFrameCount();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetDrawListSharedData();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetStyleColorName(int idx);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetStateStorage(System.IntPtr storage);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetStateStorage();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_CalcTextSizeEx([MarshalAs(UnmanagedType.LPUTF8Str)] string text, [MarshalAs(UnmanagedType.LPUTF8Str)] string text_end, [MarshalAs(UnmanagedType.I1)] bool hide_text_after_double_hash, float wrap_width);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_CalcTextSize([MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec4 ImGui_ColorConvertU32ToFloat4(uint @in);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_ColorConvertFloat4ToU32(ImVec4 @in);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ColorConvertRGBtoHSV(float r, float g, float b, System.IntPtr out_h, System.IntPtr out_s, System.IntPtr out_v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ColorConvertHSVtoRGB(float h, float s, float v, System.IntPtr out_r, System.IntPtr out_g, System.IntPtr out_b);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsKeyDown(int key);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsKeyPressedEx(int key, [MarshalAs(UnmanagedType.I1)] bool repeat);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsKeyPressed(int key);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsKeyReleased(int key);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsKeyChordPressed(int key_chord);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_GetKeyPressedAmount(int key, float repeat_delay, float rate);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetKeyName(int key);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextFrameWantCaptureKeyboard([MarshalAs(UnmanagedType.I1)] bool want_capture_keyboard);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_Shortcut(int key_chord, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextItemShortcut(int key_chord, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SetItemKeyOwner(int key);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsMouseDown(int button);
